--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   package_info_plus: ^3.0.2
   google_fonts: ^3.0.1
   intl: ^0.17.0
+  file_picker: ^5.2.11
+  image_picker: ^0.8.5+3
   flutter_svg_provider: ^1.0.3
 
 dev_dependencies:
